# src/main/java/com/app/hear/tags/controllers/TagController.java
@@ -3,6 +3,7 @@ package com.app.hear.tags.controllers;
 
 import com.app.hear.api.TagsApi;
 import com.app.hear.common.exceptions.utils.ControllerUtils;
+import com.app.hear.model.TagCreateDTO;
 import com.app.hear.model.TagDTO;
 import com.app.hear.tags.services.TagService;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +16,11 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class TagController extends ControllerUtils implements TagsApi {
     private final TagService tagService;
+
+    @Override
+    public ResponseEntity<TagDTO> createTag(TagCreateDTO tagCreateDTO) {
+        return ResponseEntity.status(201).body(tagService.createTag(tagCreateDTO));
+    }
 
     @Override
     public ResponseEntity<TagDTO> getTagById(Long tagId) {
